# cycleMRI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: Test_training.ipynb  test.ipynb
src/: evaluate.py  train.py
src/config/: config.yml
src/dataloader/: dataloader.py
src/metrics/: metric.py
src/network/: model.py
src/utils/: utils.py
