[tool.poetry]
name = "i2imri"
version = "0.1.0"
description = ""
authors = ["AbinavRavi <subramathreya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
torchvision = "^0.16.0"
pydicom = "^2.4.3"
scikit-learn = "^1.3.2"
mlflow = "^2.7.1"
scikit-image = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.1"
bandit = "^1.7.5"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
